# bo-pytest-workbook

./: LICENSE  README.md
code/cards_proj/src/cards/: api.py
code/ch1/: test_two.py
code/ch10/: test_mock.py
code/ch11/cards_proj/: tox.ini
code/ch12/script/: tox.ini  tox_bad.ini
code/ch13/cards_proj/: tox.ini
code/ch13/cards_proj/src/cards/: cli.py
code/ch13/cards_proj/tests/cli/: test_done.py
code/ch13/venv13/: pyvenv.cfg
code/ch13/venv_excercise/: pyvenv.cfg
code/ch15/pytest_skip_slow/: LICENSE  pyproject.toml  pytest_skip_slow.py
code/ch15/pytest_skip_slow_final/: README.md
code/ch2/: test_card.py  test_structure.py
code/ch3/: test_count.py  test_count_initial.py  test_fixtures.py
code/ch4/: test_hello.py  test_version.py
code/ch5/: test_fix_param.py  test_func_param.py
code/ch6/smoke/: pytest.ini
code/ch7/: test_list.py
code/ch8/: comments.txt
code/ch9/: single_file.py
code/ch9/some_code/: test_some_code.py
code/exercises/ch10/: my_info.py  test_my_info.py
code/exercises/ch12/: tox.ini
code/exercises/ch12/src/: sums.py
code/exercises/ch12/test/: test_output.py  test_sums.py
code/exercises/ch5/: test_api.py
code/exercises/ch6/: pytest.ini  test_markers.py
code/exercises/ch8/: pytest.ini
code/exercises/ch8/tests/: pyproject.toml
